<resources>
    <!--Usados en varias partes-->
    <string name="app_name">TULIB</string>
    <string name="imgApp">ImagenApp</string>
    <string name="imgLibro">ImagenLibro</string>
    <string name="imgPerfil">ImagenPerfil</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtAutor">Autor</string>
    <string name="textoAutor">Autor: </string>
    <string name="txtTitulo">Titulo</string>
    <string name="txtEstado">Estado: </string>
    <string name="textoTitulo">Titulo: </string>
    <string name="textoEstado">Sin Publicar </string>
    <string name="txtDescripcion">Descripcion Max 180 caracteres</string>
    <string name="txtGenero">Genero: </string>
    <string name="txtValoracion">Valoración: </string>
    <string name="txtValoracionTotal">Valoracion Total Del Perfil</string>
    <string name="txtFechaPublicado">Fecha publicado: </string>
    <string name="txtFloatingActionButton">Boton</string>
    <string name="txtIntroduceCorreo">Introduce un correo</string>
    <string name="txtIntroduceUsuario">Introduce un usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtIntroducePassword">Introduce contraseña</string>
    <string name="txtRepitePassword">Repite Contraseña</string>
    <string name="txtIntroduceRepitePassword">Vuelva a escribir la contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="txtRegistro">REGISTRO DE USUARIO</string>
    <string name="btnFinalizar">Finalizar</string>
    <string name="btnVolver">Volver</string>
    <string name="btnLibro">AñadirLibro</string>
    <string name="btnRetroceder">Retroceder</string>
    <string name="btnAvanzar">Avanzar</string>

    <!--Usados en activity_escribir_libro-->
    <string name="vacio"> </string>
    <string name="pagina">Página 1</string>

    <!--Usados en lista_valoraciones-->
    <string name="txtComentario">Comentario</string>

    <!--Usados en activity_valoraciones-->
    <string name="intComentario">Introduce tu comentario:</string>
    <string name="txtComentario2">Comentario: </string>
    <string name="txtValoracion2">Valoracion: </string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnEliminar">Eliminar</string>

    <!--Usado en editar_perfil-->
    <string name="txtEdad">Edad</string>
    <string name="btnGuardar">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="generos_literarios">
        <item>Ciencia ficción</item>
        <item>Terror</item>
        <item>Humor</item>
        <item>Cómics</item>
        <item>Poesía</item>
        <item>Teatro</item>
        <item>Romanticismo</item>
        <item>Aventuras</item>
        <item>Misterio</item>
        <item>Fantasía</item>
        <item>Historia</item>
        <item>Guerra</item>
        <item>Ensayo</item>
    </string-array>

</resources>