<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:contentPadding="3dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/cvListaLibros">

        <!--Para la foto -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/forma_rectangulo_naranja">

            <!--Para el nombre -->
            <ImageView
                android:id="@+id/imgListaLibros"
                android:layout_width="132dp"
                android:layout_height="123dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_book"
                android:background="@drawable/forma_rectangulo_negro"
                android:contentDescription="@string/imgLibro"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/textoAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/textoAutor"
                    android:textSize="18sp"
                    android:maxLength="30" />

                <TextView
                    android:id="@+id/txtAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/txtAutor"
                    android:textSize="18sp"
                    android:maxLength="30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/textoTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/textoTitulo"
                    android:textSize="18sp"
                    android:maxLength="30" />

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/txtTitulo"
                    android:textSize="18sp"
                    android:maxLength="30" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:textColor="@color/black"
                android:maxLength="180"
                android:text="@string/txtDescripcion"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/textoGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:text="@string/txtGenero"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/txtValoracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtValoracion"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.Holo.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:max="5"
                    android:rating="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/textoEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:text="@string/txtEstado"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/textoEstado"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imagen_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:backgroundTint="@color/white"
            app:srcCompat="@drawable/ic_more_white"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/txtFloatingActionButton"
            android:layout_marginEnd="10dp"/>


</androidx.cardview.widget.CardView>