<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgEditarPerfil"
                android:layout_width="207dp"
                android:layout_height="198dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_person"
                android:background="@drawable/forma_rectangulo_negro"
                android:contentDescription="@string/imgPerfil"/>

            <EditText
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/txtAutor"
                android:textSize="18sp"
                android:maxLength="30"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:maxLength="180"
                android:hint="@string/txtDescripcion"
                android:inputType="text"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/txtEdad"
                android:ems="10"
                android:inputType="number"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:autofillHints="" />

        </LinearLayout>

    <Button
        android:id="@+id/btnGuardarDatosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/linearLayout"
        android:text="@string/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</RelativeLayout>