<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.MainActivity">

    <ImageView
        android:id="@+id/imgAPP"
        android:layout_width="211dp"
        android:layout_height="128dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:contentDescription="@string/imgApp"
        android:src="@drawable/icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:autofillHints=""
        android:background="@drawable/forma_rectangulo_naranja"
        android:ems="10"
        android:hint="@string/txtCorreo"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAPP" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:autofillHints=""
        android:background="@drawable/forma_rectangulo_naranja"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/btn_Entrar"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:text="@string/btnEntrar"
        app:backgroundTint="@color/morado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btn_Registrar"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:text="@string/btnRegistrar"
        app:backgroundTint="@color/morado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Entrar" />

</androidx.constraintlayout.widget.ConstraintLayout>