<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.AnadirLibroActivity">

        <!--Para la foto -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Para el nombre -->
            <ImageView
                android:id="@+id/imgAnadirLibro"
                android:layout_width="207dp"
                android:layout_height="198dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_book"
                android:background="@drawable/forma_rectangulo_negro"
                android:contentDescription="@string/imgLibro"/>

            <EditText
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:text="@string/txtAutor"
                android:textSize="18sp"
                android:maxLength="30"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:hint="@string/txtAutor"/>

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:text="@string/txtTitulo"
                android:textSize="18sp"
                android:maxLength="30"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:hint="@string/txtTitulo"/>

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:maxLength="180"
                android:inputType="text|textMultiLine|textCapSentences"
                android:text="@string/txtDescripcion"
                android:hint="@string/txtDescripcion"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spinnerGeneros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/txtGenero"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/forma_rectangulo_negro"
                android:autofillHints="" />

        </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/guardarLibro"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/gris"
        android:contentDescription="@string/btnLibro"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop" />

</RelativeLayout>